update - Database name, country working

--- a/app/src/main/res/layout/activity_buying_products.xml
+++ b/app/src/main/res/layout/activity_buying_products.xml
@@ -35,14 +35,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-
             <TextView
                 android:id="@+id/text_home"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
                 android:fontFamily="@font/rubik_medium"
                 android:gravity="center_horizontal"
                 android:text="Nike Air max 1"
@@ -65,14 +63,18 @@
                 app:layout_constraintBottom_toBottomOf="@+id/euro_item"
                 app:layout_constraintStart_toStartOf="@+id/text_home"
                 app:layout_constraintTop_toBottomOf="@+id/text_home" />
+
             <com.smarteist.autoimageslider.SliderView
                 android:id="@+id/shoe_pic"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:padding="40dp"
                 android:foregroundGravity="top|right"
+                android:paddingLeft="30dp"
+                android:paddingTop="40dp"
+                android:paddingRight="30dp"
+                android:paddingBottom="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.75"
+                app:layout_constraintHeight_percent="0.71"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="1"
@@ -80,8 +82,10 @@
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
                 app:sliderIndicatorAnimationDuration="600"
-                app:sliderIndicatorGravity="center_horizontal|bottom"
+                app:sliderIndicatorGravity="left"
+                app:sliderIndicatorMarginTop="206dp"
                 app:sliderIndicatorOrientation="horizontal"
+                app:sliderIndicatorRtlMode="off"
                 app:sliderIndicatorSelectedColor="#5A5A5A"
                 app:sliderIndicatorUnselectedColor="#FFF"
                 app:sliderScrollTimeInSec="1"
@@ -308,6 +312,9 @@
             android:fitsSystemWindows="true"
             android:fontFamily="@font/rubik"
             android:hapticFeedbackEnabled="true"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
             android:text="@string/_39"
             android:textColor="@color/white"
             android:textIsSelectable="true"
@@ -322,7 +329,7 @@
             app:iconTint="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
             app:layout_constraintStart_toStartOf="@+id/size1"
-            app:layout_constraintTop_toTopOf="@+id/size1"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             app:rippleColor="@color/newcolor"
             app:strokeWidth="10dp"
             app:useCompatPadding="false" />
@@ -341,6 +348,9 @@
             android:fitsSystemWindows="true"
             android:fontFamily="@font/rubik"
             android:hapticFeedbackEnabled="true"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
             android:text="40"
             android:textColor="@color/white"
             android:textIsSelectable="true"
@@ -373,6 +383,9 @@
             android:fitsSystemWindows="true"
             android:fontFamily="@font/rubik"
             android:hapticFeedbackEnabled="true"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
             android:text="41"
             android:textColor="@color/white"
             android:textIsSelectable="true"
@@ -406,7 +419,13 @@
             android:enabled="true"
             android:fitsSystemWindows="true"
             android:fontFamily="@font/rubik"
+            android:foregroundGravity="center_vertical|center|center_horizontal"
+            android:gravity="center|center_horizontal|center_vertical"
             android:hapticFeedbackEnabled="true"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="4dp"
             android:text="@string/_39"
             android:textColor="@color/item_color"
             android:textIsSelectable="true"
@@ -417,7 +436,7 @@
             app:borderWidth="12dp"
             app:elevation="20dp"
             app:ensureMinTouchTargetSize="false"
-            app:iconPadding="10dp"
+            app:iconPadding="0dp"
             app:iconTint="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="@id/guideline8"
             app:layout_constraintStart_toStartOf="parent"
@@ -441,6 +460,10 @@
             android:fitsSystemWindows="true"
             android:fontFamily="@font/rubik"
             android:hapticFeedbackEnabled="true"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="4dp"
             android:text="40"
             android:textColor="@color/item_color"
             android:textSize="12sp"
@@ -472,6 +495,10 @@
             android:fitsSystemWindows="true"
             android:fontFamily="@font/rubik"
             android:hapticFeedbackEnabled="true"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="4dp"
             android:text="41"
             android:textColor="@color/item_color"
             android:textSize="12sp"
@@ -499,7 +526,7 @@
             android:fontFamily="@font/rubik"
             android:text="100% Original Products  \nThis item is not returnable. Items like inner-wear, personal care, make-up, socks and certain accessories do not come under our return policy. "
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -513,7 +540,7 @@
             android:layout_marginStart="16dp"
             android:text="Read More."
             android:textColor="#F72626"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_text" />
