--- a/app/src/main/res/layout/buy_with_googlepay_button.xml
+++ b/app/src/main/res/layout/buy_with_googlepay_button.xml
@@ -3,15 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48sp"
-    android:background="@drawable/googlepay_button_no_shadow_background"
+    android:background="@drawable/googlepay_button_no_shadow_background_image"
     android:clickable="true"
     android:contentDescription="@string/buy_with_googlepay_button_content_description"
     android:focusable="true"
-    android:padding="2sp">
+    android:padding="0sp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#000000"
+        android:backgroundTint="#000000"
         android:duplicateParentState="true"
         android:gravity="center_vertical"
         android:orientation="vertical"
@@ -21,15 +23,11 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:background="#000000"
+            android:backgroundTint="#000000"
             android:duplicateParentState="true"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/buy_with_googlepay_button_context" />
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:duplicateParentState="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/googlepay_button_overlay" />
 </RelativeLayout>
