--- a/app/src/main/res/layout/card_product_in_cart.xml
+++ b/app/src/main/res/layout/card_product_in_cart.xml
@@ -7,11 +7,13 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
+        android:paddingBottom="10dp"
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:background="#F7F7F7"
+            android:paddingBottom="10dp"
             android:layout_height="match_parent">
 
             <ImageView
@@ -41,7 +43,6 @@
                     android:layout_height="0dp"
                     app:layout_constraintWidth_percent="0.15"
                     android:elevation="4dp"
-                    android:layout_marginRight="32dp"
                     android:background="@drawable/capsule_button_product"
                     app:layout_constraintBottom_toBottomOf="@+id/remove_product"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +52,7 @@
                     <Button
                         android:id="@+id/plus"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="0dp"
                         android:layout_margin="0dp"
                         android:background="@drawable/capsule_button_plus"
                         android:elevation="4dp"
@@ -60,17 +61,18 @@
                         android:insetTop="0dp"
                         android:insetRight="0dp"
                         android:insetBottom="0dp"
+                        android:strokeColor="#000000"
                         android:text="+"
                         android:textAllCaps="false"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         app:backgroundTint="#FFFFFF"
                         app:iconPadding="0dp"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHeight_percent="0.4"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:strokeColor="#000000" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/amount_products"
@@ -79,9 +81,8 @@
                         android:fontFamily="@font/rubik"
                         android:text="1"
                         android:textColor="#000000"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/minus"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/plus" />
@@ -89,26 +90,28 @@
                     <Button
                         android:id="@+id/minus"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="0dp"
                         android:layout_margin="0dp"
                         android:background="@drawable/capsule_button_minus"
-                        android:elevation="4dp"
+                        android:elevation="8dp"
                         android:fontFamily="@font/rubik"
+                        android:gravity="center_vertical|center_horizontal"
                         android:insetLeft="0dp"
                         android:insetTop="0dp"
                         android:insetRight="0dp"
-                        android:layout_marginBottom="0dp"
-                        android:insetBottom="0dp"
-                        android:text="-"
+                        android:insetBottom="15dp"
+                        android:strokeColor="#000000"
+                        android:text="_"
                         android:textColor="#000000"
+                        android:textSize="16sp"
                         android:textStyle="bold"
-                        android:textSize="20sp"
                         app:backgroundTint="#FFFFFF"
                         app:iconPadding="0dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHeight_percent="0.4"
                         app:layout_constraintStart_toStartOf="parent"
-                        android:gravity="center_vertical|center_horizontal" />
+                        app:layout_constraintTop_toBottomOf="@+id/amount_products" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
@@ -165,7 +168,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"
                     android:layout_marginTop="32dp"
                     android:fontFamily="@font/rubik_medium"
                     android:text="Nike air max 1"
@@ -179,7 +181,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
                     android:fontFamily="@font/rubik"
                     android:text="40"
                     android:textColor="#000000"
