--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -54,7 +54,7 @@
             app:layout_constraintStart_toStartOf="@+id/mail_text_login"
             app:layout_constraintTop_toBottomOf="@+id/mail" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/mail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -68,7 +68,7 @@
             app:layout_constraintStart_toEndOf="@+id/email_logo"
             app:layout_constraintTop_toBottomOf="@+id/mail_text_login" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
