--- a/app/src/main/res/layout/fragment_payment_method.xml
+++ b/app/src/main/res/layout/fragment_payment_method.xml
@@ -154,11 +154,11 @@
                     android:layout_marginStart="5dp"
                     android:backgroundTintMode="src_in"
                     android:button="@drawable/ic_baseline_radio_button_unchecked_24"
-                    app:layout_constraintBottom_toTopOf="@+id/paypal_text"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.18"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/paypal_logo"
-                    app:layout_constraintWidth_percent="0.15" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.14" />
 
                 <TextView
                     android:id="@+id/paypal_text"
@@ -175,10 +175,10 @@
                     android:id="@+id/paypal_logo"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/paypal_icon"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.4"
+                    app:layout_constraintHeight_percent="0.45"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintWidth_percent="0.4" />
@@ -211,12 +211,12 @@
                     android:layout_marginLeft="5dp"
                     android:backgroundTintMode="src_in"
                     android:button="@drawable/ic_baseline_radio_button_unchecked_24"
-                    app:layout_constraintBottom_toBottomOf="@+id/mastercard_logo"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.23
 "
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/mastercard_logo"
-                    app:layout_constraintWidth_percent="0.15" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.14" />
 
                 <TextView
                     android:id="@+id/mastercard_text"
@@ -233,7 +233,7 @@
                     android:id="@+id/mastercard_logo"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:contentDescription="@string/todo"
                     android:src="@drawable/mastercard_icon"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -241,7 +241,8 @@
                     app:layout_constraintHorizontal_bias="0.495"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.4" />
+                    app:layout_constraintWidth_percent="0.4"
+                    app:srcCompat="@drawable/ic_google_pay__gpay__logo__2018_2020_" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -295,6 +296,22 @@
             app:layout_constraintStart_toStartOf="@+id/shipping_section"
             app:layout_constraintTop_toBottomOf="@+id/method"
             tools:ignore="RtlSymmetry" />
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:backgroundTintMode="src_in"
+            android:button="@drawable/ic_baseline_radio_button_unchecked_24"
+            android:drawablePadding="10dp"
+            android:paddingTop="30dp"
+            android:paddingBottom="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/method_section"
+            app:layout_constraintHeight_percent="0.05"
+            app:layout_constraintStart_toStartOf="@+id/method_section"
+            app:layout_constraintTop_toTopOf="@+id/method_section"
+            app:layout_constraintWidth_percent="0.05" />
 
         <TextView
             android:id="@+id/method_price"
@@ -394,17 +411,6 @@
             app:layout_constraintStart_toEndOf="@+id/dont2"
             app:layout_constraintTop_toTopOf="@+id/dont2" />
 
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:backgroundTintMode="src_in"
-            android:button="@drawable/ic_baseline_radio_button_unchecked_24"
-            app:layout_constraintBottom_toBottomOf="@+id/method_section"
-            app:layout_constraintStart_toStartOf="@+id/method_section"
-            app:layout_constraintTop_toTopOf="@+id/method_section" />
-
         <androidx.cardview.widget.CardView
             android:id="@+id/ideal_card"
             android:layout_width="0dp"
@@ -432,12 +438,12 @@
                     android:layout_marginLeft="5dp"
                     android:backgroundTintMode="src_in"
                     android:button="@drawable/ic_baseline_radio_button_unchecked_24"
-                    app:layout_constraintBottom_toTopOf="@+id/ideal_text"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.23
 "
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/ideal_logo"
-                    app:layout_constraintWidth_percent="0.15" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.14" />
 
                 <TextView
                     android:id="@+id/ideal_text"
@@ -454,8 +460,8 @@
                     android:id="@+id/ideal_logo"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/ideal_icon"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -490,12 +496,12 @@
                     android:layout_marginLeft="5dp"
                     android:backgroundTintMode="src_in"
                     android:button="@drawable/ic_baseline_radio_button_unchecked_24"
-                    app:layout_constraintBottom_toTopOf="@+id/applepay_text"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHeight_percent="0.23
 "
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/applepay_logo"
-                    app:layout_constraintWidth_percent="0.15" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.14" />
 
                 <TextView
                     android:id="@+id/applepay_text"
@@ -512,8 +518,8 @@
                     android:id="@+id/applepay_logo"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/applepay_icon"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHeight_percent="0.5"
                     app:layout_constraintStart_toStartOf="parent"
