--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -161,8 +161,8 @@
         tools:layout="@layout/fragment_order_details" />
     <fragment
         android:id="@+id/nav_invoice"
+        android:label="@layout/fragment_invoice"
         android:name="com.example.sneakersalert.ui.account.InvoiceFragment"
-        android:label="fragment_invoice"
         tools:layout="@layout/fragment_invoice" />
     <fragment
         android:id="@+id/nav_fill"
@@ -189,6 +189,11 @@
         android:name="com.example.sneakersalert.ui.payment.PaymentMethodFragment"
         android:label="fragment_payment_method"
         tools:layout="@layout/fragment_payment_method" />
+    <activity
+        android:id="@+id/nav_pay"
+        android:name="com.example.sneakersalert.ui.payment.PayActivity"
+        android:label="activity_pay"
+        tools:layout="@layout/activity_pay" />
 
 
 </navigation>
