--- a/app/src/main/res/layout/fragment_fill_invoice_address.xml
+++ b/app/src/main/res/layout/fragment_fill_invoice_address.xml
@@ -50,7 +50,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/liberation_sans"
-            android:text="Place"
+            android:text="City"
             android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -190,14 +190,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="28dp"
-            app:errorEnabled="true"
             android:background="@drawable/fill_text_back"
             android:ems="1"
+            android:enabled="false"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
             android:inputType="textPersonName"
             android:padding="10dp"
             android:textSize="20sp"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/full_name"
@@ -300,15 +301,15 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginTop="8dp"
-            app:errorEnabled="true"
             android:autofillHints=""
             android:background="@drawable/fill_text_back"
             android:ems="10"
             android:fontFamily="@font/liberation_sans"
             android:gravity="start|top"
-            android:inputType="number"
+            android:inputType="text"
             android:padding="10dp"
             android:textSize="20sp"
+            app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="@id/postal_section"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/house_number_section"
