--- a/app/src/main/res/layout/activity_buying_products.xml
+++ b/app/src/main/res/layout/activity_buying_products.xml
@@ -45,7 +45,9 @@
                 android:gravity="center_horizontal"
                 android:text="Nike Air max 1"
                 android:textAlignment="center"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/shoe_pic" />
@@ -55,18 +57,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginLeft="64dp"
                 android:fontFamily="@font/rubik"
                 android:text="Have A Nike Day"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/euro_item"
                 app:layout_constraintStart_toStartOf="@+id/text_home"
                 app:layout_constraintTop_toBottomOf="@+id/text_home" />
 
-            <com.smarteist.autoimageslider.SliderView
+            <com.ouattararomuald.slider.ImageSlider
                 android:id="@+id/shoe_pic"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:foregroundGravity="top|right"
                 android:paddingLeft="30dp"
@@ -77,7 +80,6 @@
                 app:layout_constraintHeight_percent="0.71"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="1"
                 app:sliderAnimationDuration="600"
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
@@ -119,7 +121,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="€"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/text_home"
                 app:layout_constraintTop_toBottomOf="@+id/text_home" />
@@ -129,9 +133,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:layout_marginLeft="4dp"
                 android:text="149"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/euro_item"
                 app:layout_constraintStart_toEndOf="@+id/euro_item"
@@ -178,7 +183,9 @@
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="Quantity:"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 app:layout_constraintStart_toStartOf="@+id/price_item"
                 app:layout_constraintTop_toBottomOf="@+id/size_item_text" />
 
@@ -189,7 +196,9 @@
                 android:layout_marginStart="4dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="40"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/size_item_text"
                 app:layout_constraintStart_toEndOf="@+id/size_item_text"
@@ -203,7 +212,9 @@
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="1"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/size_item_text"
                 app:layout_constraintStart_toEndOf="@+id/quantity_text"
@@ -217,7 +228,9 @@
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="Size:"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 app:layout_constraintStart_toStartOf="@+id/price_item"
                 app:layout_constraintTop_toBottomOf="@+id/price_item" />
 
@@ -228,7 +241,9 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="€ 289"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/name_item"
                 app:layout_constraintTop_toBottomOf="@+id/model_item" />
@@ -240,7 +255,9 @@
                 android:layout_marginStart="32dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text='"London"'
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/item_picture"
                 app:layout_constraintTop_toBottomOf="@+id/name_item" />
@@ -252,8 +269,10 @@
                 android:layout_marginTop="76dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="Thank You"
+                android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -268,6 +287,8 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/liberation_sans"
                 android:text="Item has successfully added to your cart"
+                android:textAllCaps="false"
+                android:textIsSelectable="false"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -293,6 +314,7 @@
                 android:fontFamily="@font/liberation_sans"
                 android:text="NIKE AIR MAX 1"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 app:layout_constraintStart_toEndOf="@+id/item_picture"
                 app:layout_constraintTop_toTopOf="@+id/item_picture" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -316,8 +338,9 @@
             android:paddingTop="0dp"
             android:paddingRight="0dp"
             android:text="@string/_39"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textIsSelectable="true"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="invisible"
@@ -352,8 +375,9 @@
             android:paddingTop="0dp"
             android:paddingRight="0dp"
             android:text="40"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textIsSelectable="true"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="invisible"
@@ -387,8 +411,9 @@
             android:paddingTop="0dp"
             android:paddingRight="0dp"
             android:text="41"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textIsSelectable="true"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="invisible"
@@ -427,8 +452,9 @@
             android:paddingRight="0dp"
             android:paddingBottom="4dp"
             android:text="@string/_39"
+            android:textAllCaps="false"
             android:textColor="@color/item_color"
-            android:textIsSelectable="true"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="visible"
@@ -465,7 +491,9 @@
             android:paddingRight="0dp"
             android:paddingBottom="4dp"
             android:text="40"
+            android:textAllCaps="false"
             android:textColor="@color/item_color"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="visible"
@@ -500,7 +528,9 @@
             android:paddingRight="0dp"
             android:paddingBottom="4dp"
             android:text="41"
+            android:textAllCaps="false"
             android:textColor="@color/item_color"
+            android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
             android:visibility="visible"
@@ -525,7 +555,9 @@
             android:layout_marginTop="40dp"
             android:fontFamily="@font/rubik"
             android:text="100% Original Products  \nThis item is not returnable. Items like inner-wear, personal care, make-up, socks and certain accessories do not come under our return policy. "
+            android:textAllCaps="false"
             android:textColor="#000000"
+            android:textIsSelectable="false"
             android:textSize="14sp"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -539,7 +571,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Read More."
+            android:textAllCaps="false"
             android:textColor="#F72626"
+            android:textIsSelectable="false"
             android:textSize="14sp"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
@@ -555,7 +589,9 @@
             android:foregroundGravity="center"
             android:gravity="center"
             android:text="Spec"
+            android:textAllCaps="false"
             android:textColor="#000000"
+            android:textIsSelectable="false"
             android:textScaleX="1"
             android:textSize="16sp"
             android:visibility="visible"
