--- a/app/src/main/res/layout/card_jordan.xml
+++ b/app/src/main/res/layout/card_jordan.xml
@@ -32,7 +32,7 @@
         tools:targetApi="lollipop">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/bottom_card_jordan">
 
@@ -62,26 +62,26 @@
                     android:id="@+id/euro2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
                     android:fontFamily="@font/rubik"
                     android:text="€"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/price_jordan"
-                    app:layout_constraintHorizontal_chainStyle="packed" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_chainStyle="packed"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/price_jordan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
                     android:fontFamily="@font/rubik"
                     android:text="250"
                     android:textColor="#000000"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/euro2"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/euro2"
                     app:layout_constraintTop_toTopOf="@+id/euro2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -102,13 +102,13 @@
 
                 <TextView
                     android:id="@+id/jordan_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:fontFamily="@font/rubik"
                     android:paddingTop="5dp"
                     android:text="Jordan 1 mid"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="19sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
