--- a/app/src/main/res/layout/card_spec.xml
+++ b/app/src/main/res/layout/card_spec.xml
@@ -38,9 +38,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:layout_marginLeft="36dp"
+                android:selectAllOnFocus="false"
                 android:text="Anti-pollution, anti-dust"
+                android:textAllCaps="false"
                 android:textColor="#000000"
+                android:textIsSelectable="false"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@+id/logo_spec"
                 app:layout_constraintStart_toEndOf="@+id/logo_spec"
