--- a/app/src/main/res/layout/fragment_order_details.xml
+++ b/app/src/main/res/layout/fragment_order_details.xml
@@ -48,33 +48,6 @@
             app:layout_constraintTop_toBottomOf="@+id/shipping_address_text" />
 
         <Button
-            android:id="@+id/save_address"
-            android:layout_width="0dp"
-            android:layout_height="55dp"
-            android:layout_gravity="start"
-            android:layout_marginTop="32dp"
-            android:enabled="true"
-            android:fontFamily="@font/lato"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="5dp"
-            android:text="Back to the Account"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            app:backgroundTint="#292C2F"
-            app:cornerRadius="0dp"
-            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
-            app:iconPadding="1dp"
-            app:iconTint="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerViewOrders"
-            app:layout_constraintWidth_percent="0.65"
-            app:rippleColor="#707070" />
-
-        <Button
             android:id="@+id/change_2"
             android:layout_width="0dp"
             android:layout_height="40dp"
@@ -89,7 +62,7 @@
             android:textSize="14sp"
             app:backgroundTint="#292C2F"
             app:iconTint="#000000"
-            app:layout_constraintBottom_toBottomOf="@+id/person_name3"
+            app:layout_constraintBottom_toBottomOf="@+id/person_address2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/person_name3"
             app:layout_constraintWidth_percent="0.3"
